<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.calinfo-nc.services</groupId>
    <artifactId>common-project</artifactId>
    <version>1.2.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <description>Bibliothèque parent de tous les projets spring boot de type "services" de l'éditeur CALINFO.</description>
    <developers>
        <developer>
            <organization>CALINFO</organization>
            <organizationUrl>https://www.calinfo-nc.com</organizationUrl>
            <email>calinfo@calinfo-nc.com</email>
            <timezone>GMT+11</timezone>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <version.service-common>1.2.0-SNAPSHOT</version.service-common>
        <version.keycloak>12.0.2</version.keycloak>
        <version.maven-source-plugin>3.2.1</version.maven-source-plugin>
        <version.lombok>1.18.16</version.lombok>
        <version.spring>2.4.0</version.spring>
        <version.testng>7.1.0</version.testng>
        <version.maven-war-plugin>3.3.1</version.maven-war-plugin>
        <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
        <version.common-net>3.6</version.common-net>
        <version.jacoco-maven-plugin>0.8.5</version.jacoco-maven-plugin>
        <version.maven-surefire-plugin>3.0.0-M5</version.maven-surefire-plugin>
        <version.commons-lang3>3.10</version.commons-lang3>
        <version.teavm>0.6.1</version.teavm> <!-- Cette version doit rester dans le pom parent afin que les apply utilisant common-teavm puisse changer la version de teaVM -->

        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <java.version>11</java.version>

        <maven.site.path>/${project.artifactId}</maven.site.path>
        <github.project.name>services-common-project</github.project.name>

        <license.gpl3.licenseName>gpl_v3</license.gpl3.licenseName>
        <license.gpl3.organisationName>CALINFO</license.gpl3.organisationName>
        <license.gpl3.inceptionYear>2019</license.gpl3.inceptionYear>

    </properties>

    <url>https://calinfo-nc.github.io/${github.project.name}/${project.version}</url>

    <licenses>
        <license>
            <name>GNU GPLv3</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
        </license>
    </licenses>

    <profiles>

        <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <!-- Générer le rapport Jacoco -->
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${version.jacoco-maven-plugin}</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>


    <build>
        <finalName>${project.artifactId}</finalName>

        <pluginManagement>
            <plugins>
                <!-- Licence GNU GPL -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>first</id>
                            <goals>
                                <goal>update-file-header</goal>
                            </goals>
                            <phase>process-sources</phase>
                            <configuration>
                                <licenseName>${license.gpl3.licenseName}</licenseName>
                                <organizationName>${license.gpl3.organisationName}</organizationName>
                                <inceptionYear>${license.gpl3.inceptionYear}</inceptionYear>
                                <canUpdateCopyright>true</canUpdateCopyright>
                                <roots>
                                    <root>src/main/java</root>
                                </roots>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>


        </pluginManagement>

        <plugins>

            <!-- Permet d'ingorer l'absence du fichier web.xml géré par springboot -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>${version.maven-war-plugin}</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>

            <!-- On précise -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.maven-compiler-plugin}</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>


            <!-- Génère les .jar contenant uniquement les sources -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>${version.maven-source-plugin}</version>
                <executions>
                    <execution>
                        <id>bundle-sources</id>
                        <phase>package</phase>
                        <goals>
                            <!-- produce source artifact for main project sources -->
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>


    <dependencyManagement>

        <dependencies>

            <!-- Définie l'application étant de type Spring -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${version.spring}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>

        <!-- Utilisation de lombok pour les getter/setter -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${version.lombok}</version>
        </dependency>

        <!-- correction d'un bug sur maven-surfery-plugin -->
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${version.maven-surefire-plugin}</version>
        </dependency>



    </dependencies>

    <modules>
        <module>common-api</module>
        <module>common</module>
        <module>common-test</module>
        <module>common-io</module>
        <module>common-teavm</module>
    </modules>


</project>
